# multando-backend

./: .dockerignore  .env.example  .env.railway  .env.test  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.celery  LICENSE  README.md  alembic.ini  docker-compose.self-host.yml  pyproject.toml  railway.beat.toml  railway.worker.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_custodial_wallets.py  003_api_keys.py  004_cities.py  005_fix_enum_values_lowercase.py  006_fix_remaining_enum_values.py  007_add_evidence_capture_columns.py  007b_fix_alembic_col.py  008_add_report_statuses.py  008_statuses.py  009_add_confidence_and_authority_fields.py  009_confidence_auth.py  010_abuse_guard.py  011_record_submissions.py  012_partnerships.py  013_api_keys_environment.py  014_federation.py  015_social_auth.py  016_oauth_codes.py  017_api_key_redirect_uris.py  018_sdm_submissions.py
app/: __init__.py  main.py  tasks.py
app/api/: deps.py
app/core/: __init__.py  celery.py  config.py  database.py  encryption.py  enterprise.py  redis.py  security.py
app/integrations/: captcha_solver.py  department_mapper.py  record_submitter.py  record_task.py  sdm_bogota.py  sdm_task.py
app/models/: __init__.py  activity.py  api_key.py  authority.py  base.py  city.py  conversation.py  enums.py  federation.py  oauth.py  partner.py  record_submission.py  report.py  sdm_submission.py  user.py  wallet.py  webhook.py
app/schemas/: __init__.py  (+26 more)
tests/: conftest.py  test_auth.py  test_blockchain.py  test_gamification.py  test_health.py  test_reports.py  test_uploads.py
(+67 files in other folders)
